// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer renders with default values 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          height="16"
          style="height: 16px; line-height: 16px; font-size: 1px;"
        >
           
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Spacer renders with props 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          height="10"
          style="height: 10px; line-height: 10px; font-size: 1px;"
        >
           
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
